# pointml

./: README.md  data_prepare.sh  draft.ipynb  param.json  train.py
tfmodel/: model.py
utils/: load_ikea_data.py  load_modelnet.py  pcd2deep.py  pcd2png.py  tf_util2.py
utils/obj_ply/src/: CMakeLists.txt  main.cpp
utils/pc2deepimg/src/: CMakeLists.txt  main.cpp
utils/pc_prepare/src/: CMakeLists.txt  main.cpp
utils/scanner/src/: CMakeLists.txt  main.cpp
utils/view_cloud/src/: CMakeLists.txt  main.cpp
